7902654: support @enablePreview